--- a/dark/index.html
+++ b/dark/index.html
@@ -274,7 +274,7 @@ open tabs
     </div>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Sign in</button>
+    <button class="btn btn-outline-primary" type="submit">Sign in</button>
   </div>
 </form> 
   </div>
