--- a/dark/log-in/index.html
+++ b/dark/log-in/index.html
@@ -124,6 +124,8 @@
       </label>
     </div>
   </div>
+  <label for="exampleColorInput" class="form-label">Color picker</label>
+<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
     <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/dark/learn" role="button">submit</a>
 </form>
     <div class="p-3 mb-2 bg-dark text-white">made with github</div>
