--- a/learn/index.html
+++ b/learn/index.html
@@ -121,6 +121,8 @@
       </label>
     </div>
   </div>
+  <label for="exampleColorInput" class="form-label">Color picker</label>
+<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
   <div class="col-12">
     <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/learnpage" role="button">submit</a>
   </div>  
