--- a/index.html
+++ b/index.html
@@ -220,71 +220,95 @@ open tabs
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
-    <form class="row g-3">
-  <div class="col-md-4">
-    <label for="validationServer01" class="form-label">First name</label>
-    <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-  <div class="col-md-4">
-    <label for="validationServer02" class="form-label">Last name</label>
-    <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
-  </div>
-  <div class="col-md-4">
-    <label for="validationServerUsername" class="form-label">Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="inputGroupPrepend3">@</span>
-      <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-      <div id="validationServerUsernameFeedback" class="invalid-feedback">
-        Please choose a username.
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <label for="validationServer03" class="form-label">City</label>
-    <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-    <div id="validationServer03Feedback" class="invalid-feedback">
-      Please provide a valid city.
-    </div>
-  </div>
-  <div class="col-md-3">
-    <label for="validationServer04" class="form-label">State</label>
-    <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-      <option selected disabled value="">Choose...</option>
-      <option>...</option>
-    </select>
-    <div id="validationServer04Feedback" class="invalid-feedback">
-      Please select a valid state.
-    </div>
-  </div>
-  <div class="col-md-3">
-    <label for="validationServer05" class="form-label">Zip</label>
-    <input type="text" class="form-control is-invalid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-    <div id="validationServer05Feedback" class="invalid-feedback">
-      Please provide a valid zip.
-    </div>
-  </div>
-  <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
-      <label class="form-check-label" for="invalidCheck3">
-        Agree to terms and conditions
-      </label>
-      <div id="invalidCheck3Feedback" class="invalid-feedback">
-        You must agree before submitting.
-      </div>
-    </div>
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit">Sign in</button>
-  </div>
-</form> 
-  </div>
+   <div class="modal-content">
+                    <form method="POST" class="sign-box" id="form-register" onsubmit="return false;">
+                    <div style="display: flex">
+                        <div class="sign-avatar">
+                            <img src="kelaskaryabersama2-al.jpg" style="border-radius: 0px !important;" alt="kelaskaryabersama2-al">
+                        </div>
+                    </div>
+                    <div class="modal-header">
+                        <h4 class="modal-title text-center">Kelaskaryabersama</h4>
+                    </div>
+                    <div class="modal-body">
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a data-toggle="tab" href="#menu1">Warga Belajar</a></li>
+                            <li><a data-toggle="tab" href="#menu2">Tutor</a></li>
+                        </ul>
+                        <br>
+                        <div class="tab-content">
+                            <div id="menu1" class="tab-pane fade in active">
+                                <div class="form-group row">
+                                    <div class="col-md-12">
+                                        <input type="text" class="form-control" name="kode_kelas" id="kode_kelas" placeholder="Kode Kelas" required="" fdprocessedid="9s86ge">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-12">
+                                        <input type="text" class="form-control" name="nama_siswa" id="nama_siswa" placeholder="Nama Lengkap" required="" fdprocessedid="8lp7wg">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-12">
+                                        <input type="text" pattern="([a-z0-9-_.@]){4,}" class="form-control" name="username_siswa" id="username_siswa" placeholder="Username atau NIK, minimal 4 karakter" title="Hanya dapat diisi menggunakan huruf kecil, angka, titik (.), underscore (_), strip (-), dan at (@)" required="" fdprocessedid="d4sf9j">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-12">
+                                        <div class="input-append input-group"><input type="password" class="form-control" name="password_siswa" id="password_siswa" placeholder="Kata sandi" data-toggle="password" required="" fdprocessedid="8xol3"><input type="text" class="form-control" placeholder="Kata sandi" style="display: none;"><span tabindex="100" title="Click here to show/hide password" class="add-on input-group-addon" style="cursor: pointer;"><i class=" fa fa-eye"></i></span></div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-12">
+                                        <div class="input-append input-group"><input type="password" class="form-control re_password_siswa" name="re_password_siswa" id="re_password_siswa" placeholder="Kata ulang sandi" data-toggle="password" fdprocessedid="1pdf2d"><input type="text" class="form-control re_password_siswa" placeholder="Kata ulang sandi" style="display: none;"><span tabindex="100" title="Click here to show/hide password" class="add-on input-group-addon" style="cursor: pointer;"><i class=" fa fa-eye"></i></span></div>
+                                        <span id="icon_re_password_siswa"></span>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-rounded btn-primary pull-right" name="submit_siswa" fdprocessedid="uasxpb">Daftar</button>
+                                    <button type="button" class="btn btn-rounded btn-default btn-cancel" data-dismiss="modal" onclick="clear();" fdprocessedid="7j2s2c">Batal</button>
+                                </div>
+                            </div>
+                            <div id="menu2" class="tab-pane fade">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group row">
+                                            <div class="col-md-12">
+                                                <input type="text" class="form-control" name="nama_guru" id="nama_guru" placeholder="Nama Lengkap">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-12">
+                                                <input type="text" pattern="([a-z0-9-_.@]){4,}" class="form-control" name="username_guru" id="username_guru" placeholder="Username atau NIK, minimal 4 karakter" title="Hanya dapat diisi menggunakan huruf kecil, angka, titik (.), underscore (_), strip (-), dan at (@)">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-12">
+                                                <input type="email" class="form-control" name="email_guru" id="email_guru" placeholder="Email">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-12">
+                                                <div class="input-append input-group"><input type="password" class="form-control" name="password_guru" id="password_guru" placeholder="Kata sandi" data-toggle="password"><input type="text" class="form-control" placeholder="Kata sandi" style="display: none;"><span tabindex="100" title="Click here to show/hide password" class="add-on input-group-addon" style="cursor: pointer;"><i class=" fa fa-eye"></i></span></div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-md-12">
+                                                <div class="input-append input-group"><input type="password" class="form-control re_password_guru" name="re_password_guru" id="re_password_guru" placeholder="Kata ulang sandi" data-toggle="password"><input type="text" class="form-control re_password_guru" placeholder="Kata ulang sandi" style="display: none;"><span tabindex="100" title="Click here to show/hide password" class="add-on input-group-addon" style="cursor: pointer;"><i class=" fa fa-eye"></i></span></div>
+                                                <span id="icon_re_password_guru"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-rounded btn-primary pull-right" name="submit_guru" value="guru">Daftar</button>
+                                    <button type="button" class="btn btn-rounded btn-default btn-cancel" data-dismiss="modal" onclick="clear();">Batal</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </form>
+                </div>
 </div>
     <div class="text-bg-dark p-3">made with github</div>
     <div class="text-bg-dark p-3">deployed with netlify</div>
