--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ open tabs
                     </div>
                     </form>
                 </div>
+  </div>
 </div>
     <div class="text-bg-dark p-3">made with github</div>
     <div class="text-bg-dark p-3">deployed with netlify</div>
