--- a/index.html
+++ b/index.html
@@ -239,19 +239,27 @@ open tabs
                         <div class="tab-content">
                             <div id="menu1" class="tab-pane fade in active">
                                 <div class="form-group row">
-                                    <div class="col-md-12">
-                                        <input type="text" class="form-control" name="kode_kelas" id="kode_kelas" placeholder="Kode Kelas" required="" fdprocessedid="9s86ge">
-                                    </div>
+                                  <div class="input-group has-validation">
+  <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-check" viewBox="0 0 16 16">
+  <path d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z"/>
+  <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
+</svg></span>
+  <div class="form-floating is-invalid">
+    <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" required>
+    <label for="floatingInputGroup2">address</label>
+  </div>
+  <div class="invalid-feedback">
+    Please enter email address.
+  </div>
+</div>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-md-12">
-                                        <input type="text" class="form-control" name="nama_siswa" id="nama_siswa" placeholder="Nama Lengkap" required="" fdprocessedid="8lp7wg">
+                                        <input type="text" class="form-control" name="user_name" id="user_name" placeholder="username" required="" fdprocessedid="8754kf">
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <div class="col-md-12">
-                                        <input type="text" pattern="([a-z0-9-_.@]){4,}" class="form-control" name="username_siswa" id="username_siswa" placeholder="Username atau NIK, minimal 4 karakter" title="Hanya dapat diisi menggunakan huruf kecil, angka, titik (.), underscore (_), strip (-), dan at (@)" required="" fdprocessedid="d4sf9j">
-                                    </div>
+                                  
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-md-12">
