--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
   algoliasearchNetlify({
     appId: 'URLTA0DMWY',
-    apiKey: '<YOUR_ALGOLIA_SEARCH_API_KEY>',
+    apiKey: '<s>',
     siteId: '6f618b49-d928-40a5-bb19-f3230e62c95e',
     branch: 'main',
     selector: 'div#search',
@@ -212,11 +212,11 @@ open tabs
     </div>
   </div>
 </div>
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">sign in</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">sign in</button>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+<div class="offcanvas offcanvas-right" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasBottomLabel">sign in</h5>
+    <h5 class="offcanvas-title" id="offcanvasRightLabel">sign in</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
