--- a/index.html
+++ b/index.html
@@ -220,17 +220,13 @@ open tabs
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
-   <div class="modal-content">
                     <form method="POST" class="sign-box" id="form-register" onsubmit="return false;">
                     <div style="display: flex">
                         <div class="sign-avatar">
                             <img src="kelaskaryabersama2-al.jpg" style="border-radius: 0px !important;" alt="kelaskaryabersama2-al">
                         </div>
                     </div>
-                    <div class="modal-header">
-                        <h4 class="modal-title text-center">Kelaskaryabersama</h4>
-                    </div>
-                    <div class="modal-body">
+                        <h4>Kelaskaryabersama</h4>
                         <ul class="nav nav-tabs">
                             <li class="active"><a data-toggle="tab" href="#menu1">Warga Belajar</a></li>
                             <li><a data-toggle="tab" href="#menu2">Tutor</a></li>
@@ -272,10 +268,8 @@ open tabs
                                         <span id="icon_re_password_siswa"></span>
                                     </div>
                                 </div>
-                                <div class="modal-footer">
                                     <button type="submit" class="btn btn-rounded btn-primary pull-right" name="submit_siswa" fdprocessedid="uasxpb">Daftar</button>
                                     <button type="button" class="btn btn-rounded btn-default btn-cancel" data-dismiss="modal" onclick="clear();" fdprocessedid="7j2s2c">Batal</button>
-                                </div>
                             </div>
                             <div id="menu2" class="tab-pane fade">
                                 <div class="row">
@@ -308,10 +302,8 @@ open tabs
                                         </div>
                                     </div>
                                 </div>
-                                <div class="modal-footer">
                                     <button type="submit" class="btn btn-rounded btn-primary pull-right" name="submit_guru" value="guru">Daftar</button>
                                     <button type="button" class="btn btn-rounded btn-default btn-cancel" data-dismiss="modal" onclick="clear();">Batal</button>
-                                </div>
                             </div>
                         </div>
                     </div>
