--- a/dark/learn/hypertext-dark/index.html
+++ b/dark/learn/hypertext-dark/index.html
@@ -53,7 +53,7 @@
     <a class="nav-link" href="#">Maths</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Scratch</a>
+    <a class="nav-link" href="#">fun tips</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
