--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -52,6 +52,9 @@
     <a class="nav-link" href="#">Maths</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="#">fun tips</a>
+  </li>      
+  <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
