Update and rename learnpage/fun-tips-io to learnpage/funtips-io/index.html

--- a/learnpage/funtips-io/index.html
+++ b/learnpage/funtips-io/index.html
@@ -90,10 +90,12 @@
   <p>2?. release and pull</p>
   <p>ifelse: if your kite fall, pull it lightly or jerk it and release</p>
   <h4 id="scrollspyHeading2">lego</h4>
-  <p>...</p>
-  <h4 id="scrollspyHeading3">button</h4>
-  <p>...</p>
-  <h4 id="scrollspyHeading4">image</h4>
+  <p>here is how to make a lego house, it is very easy.</p>
+  <p>you just need to measure the walls so the minifigures could fit inside</p>
+  <h4 id="scrollspyHeading3">hotwheels</h4>
+  <p>how to choose a good hotwheels for your track: find one that has a stunt loop symbol on it or make a qualification.</p>
+  <p>track: make sure your track is logic so your car can use it</p>
+  <h4 id="scrollspyHeading4">paper planes</h4>
   <p>...</p>
     <h4 id="scrollspyHeading5">alerts</h4>
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
