--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -52,7 +52,7 @@
     <a class="nav-link" href="#">Maths</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">fun tips</a>
+    <a class="nav-link" href="funtips-io">fun tips</a>
   </li>      
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
