--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -53,7 +53,7 @@
     <a class="nav-link" href="#">Maths</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">fun tips</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage/funtips-io">fun tips</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
