--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="shortcut icon" href="download.png" />
+    <title>404 not found</title>
+  </head>
+  <body>
+    <img src="profile-first-repo.svg" class="img-fluid" alt="profile-first-repo">
+    <h1>404 not found</h1>
+    <a href="https://kelaskaryabersama.netlify.app/learnpage/funtips-io/>go back</a>
+  </body>
+</html>
