--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="shortcut icon" href="download.png" />
     <title>404 not found</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
     <img src="profile-first-repo.svg" class="img-fluid" alt="profile-first-repo">
     <h1>404 not found</h1>
     <a href="https://kelaskaryabersama.netlify.app/learnpage/funtips-io/>go back</a>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
