--- a/learnpage/funtips-io/index.html
+++ b/learnpage/funtips-io/index.html
@@ -110,6 +110,7 @@
 </div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
+      <a href="games>games</a>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
