--- a/learnpage/funtips-io/index.html
+++ b/learnpage/funtips-io/index.html
@@ -59,7 +59,8 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
-      <h6><code></h6>
+      <a class="btn btn-primary" href="#" role="button">games</a>
+      <h6></h6>
       <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
   <a class="navbar-brand" href="#">funtipzz!!!.io 🙄</a>
   <ul class="nav nav-pills">
@@ -110,7 +111,6 @@
 </div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
-      <a href="games>games</a>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
