--- a/learnpage/funtips-io/index.html
+++ b/learnpage/funtips-io/index.html
@@ -81,8 +81,8 @@
     </li>
   </ul>
 </nav>
-<a class="btn btn-primary" href="#" role="button">games</a>
 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+<a class="btn btn-primary" href="games" role="button">games</a>
   <h4 id="scrollspyHeading1">kitezz!!</h4>
   <h1>🪁🪁🪁🪁</h1>
   <p><strong>windy days  required</strong> fly a kite 🪁</p>
