--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -8,9 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
-    <img src="profile-first-repo.svg" class="img-fluid" alt="profile-first-repo">
-    <h1>404 not found</h1>
-    <a href="https://kelaskaryabersama.netlify.app/learnpage/funtips-io/>go back</a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://kelaskaryabersama.netlify.app/">kelaskaryabersama</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="https://kelaskaryabersama.netlify.app/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="https://kelaskaryabersama.netlify.app/learnpage/">Learn</a>
+        </li>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Warning!</strong> this site is in construction.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+<h4>slingshot <p><a class="link-opacity-100" href="https://scratch.mit.edu/projects/873095813/">on scratch</a></p></h4>
+<div class="ratio ratio-16x9">
+  <iframe src="https://scratch.mit.edu/projects/873095813/" title="Scratch project" allowfullscreen></iframe>
+</div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
