--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -37,6 +37,14 @@
 <div class="ratio ratio-16x9">
   <iframe src="https://scratch.mit.edu/projects/873095813/" title="Scratch project" allowfullscreen></iframe>
 </div>
+    <h4>dashcraft.io <p><a href="https://crazygames.com/games/dashcraft.io">on crazygame</a></p></h4>
+<div class="ratio ratio-16x9">
+  <iframe src="https://crazygames.com/games/dashcraft.io" title=".io game" allowfullscreen></iframe>
+</div>
+    <h4>slither.io <p><a href="https://slither.io">on slither.io</a></p></h4>
+    <div class="ratio ratio-16x9">
+  <iframe src="https://slither.io" title=".io game" allowfullscreen></iframe>
+</div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
