--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -45,6 +45,10 @@
     <div class="ratio ratio-16x9">
   <iframe src="https://slither.io" title=".io game" allowfullscreen></iframe>
 </div>
+    <h4>diep.io <p><a href="https://slither.io">on diep.io</a></p></h4>
+    <div class="ratio ratio-16x9">
+  <iframe src="https://diep.io" title=".io game" allowfullscreen></iframe>
+</div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
