--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -45,7 +45,7 @@
     <div class="ratio ratio-16x9">
   <iframe src="https://slither.io" title=".io game" allowfullscreen></iframe>
 </div>
-    <h4>diep.io <p><a href="https://slither.io">on diep.io</a></p></h4>
+    <h4>diep.io <p><a href="https://diep.io">on diep.io</a></p></h4>
     <div class="ratio ratio-16x9">
   <iframe src="https://diep.io" title=".io game" allowfullscreen></iframe>
 </div>
