--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -46,7 +46,7 @@
     <a class="nav-link" href="hypertextmarkuplanguage">HTML</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Scratch</a>
+    <a class="nav-link" href="scratch">Scratch</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Maths</a>
