--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -40,10 +40,10 @@
 </div>
     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="hypertextmarkuplanguage">HTML</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage/hypertextmarkuplanguage">HTML</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Scratch</a>
@@ -52,7 +52,7 @@
     <a class="nav-link" href="#">Maths</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="funtips-io">fun tips</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage/funtips-io">fun tips</a>
   </li>      
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
