--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -58,7 +58,8 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
-    
+    <img src="hammer-svg-repo.svg" class="rounded mx-auto d-block" alt="hammer-svg-repo">
+    <h1>this page is in construction</h1>
         <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
