--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>scratch | learn | kelaskaryabersama</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
@@ -46,7 +46,7 @@
     <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage/hypertextmarkuplanguage">HTML</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Scratch</a>
+    <a class="nav-link active" aria-current="page" href="#">Scratch</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Maths</a>
