--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -49,7 +49,7 @@
     <a class="nav-link" href="scratch">Scratch</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Maths</a>
+    <a class="nav-link" href="maths">Maths</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="funtips-io">fun tips</a>
