--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -58,9 +58,13 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
-    <img src="hammer-svg-repo.svg" class="rounded mx-auto d-block" alt="hammer-svg-repo">
-    <h1>this page is in construction</h1>
-        <h1 class="display-1">News News!</h1>
+<scratchblocks>Scratch blocks for scratch 3.0:: #ff00ff cap</scratchblocks>
+<scratchblocks>lets learn!</scratchblocks>
+<scratchblocks>(1. motion)</scratchblocks>
+    <h6>here are some blocks from the motion folder:</h6>
+    <sb>move [10] steps</sb>
+    <sb>turn [15] degrees</sb>
+    <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
       alkiva117 added home page and navbar-1
