--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -64,6 +64,7 @@
     <h6>here are some blocks from the motion folder:</h6>
     <sb>move [10] steps</sb>
     <sb>turn [15] degrees</sb>
+    <sb>change x by [10]</sb>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
