--- a/profile/index.html
+++ b/profile/index.html
@@ -7,7 +7,94 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+<nav class="navbar sticky-top bg-body-tertiary" style="background-color: ##7643dc;">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">profile</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://kelaskaryabersama.netlify.app"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+  <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+</svg></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage">Learn</a>
+          </li>
+        </ul>
+        <form class="d-flex mt-3" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</nav>
+    <section class="vh-100" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-md-9 col-lg-7 col-xl-5">
+        <div class="card" style="border-radius: 15px; background-color: #93e2bb;">
+          <div class="card-body p-4 text-black">
+            <div>
+              <h6 class="mb-4">Alkiva rainza adiarsa</h6>
+              <div class="d-flex align-items-center justify-content-between mb-3">
+                <p class="small mb-0"><i class="far fa-clock me-2"></i>3 hrs</p>
+                <p class="fw-bold mb-0">$90</p>
+              </div>
+            </div>
+            <div class="d-flex align-items-center mb-4">
+              <div class="flex-shrink-0">
+                <img src="..."
+                  alt="Generic placeholder image" class="img-fluid rounded-circle border border-dark border-3"
+                  style="width: 70px;">
+              </div>
+              <div class="flex-grow-1 ms-3">
+                <div class="d-flex flex-row align-items-center mb-2">
+                  <p class="mb-0 me-2">Alkiva117@github.com</p>
+                  <ul class="mb-0 list-unstyled d-flex flex-row" style="color: #1B7B2C;">
+                    <li>
+                      <i class="fas fa-star fa-xs"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star fa-xs"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star fa-xs"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star fa-xs"></i>
+                    </li>
+                    <li>
+                      <i class="fas fa-star fa-xs"></i>
+                    </li>
+                  </ul>
+                </div>
+                <div>
+                  <button type="button" class="btn btn-outline-dark btn-rounded btn-sm"
+                    data-mdb-ripple-color="dark" href="https://scratch.mit.edu/users/kelaskaryabersama/">+ Follow</button>
+                  <button type="button" class="btn btn-outline-dark btn-rounded btn-sm"
+                    data-mdb-ripple-color="dark" href="https://github/alkiva117/">See profile</button>
+                  <button type="button" class="btn btn-outline-dark btn-floating btn-sm"
+                    data-mdb-ripple-color="dark"><i class="fas fa-comment" href="https://scratch.mit.edu/users/kelaskaryabersama/comments"></i></button>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <p class="my-4 pb-1">52 comments</p>
+            <button type="button" class="btn btn-success btn-rounded btn-block btn-lg"><i
+                class="far fa-clock me-2"></i>contact</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
