--- a/profile/index.html
+++ b/profile/index.html
@@ -45,12 +45,12 @@
               <h6 class="mb-4">Alkiva rainza adiarsa</h6>
               <div class="d-flex align-items-center justify-content-between mb-3">
                 <p class="small mb-0"><i class="far fa-clock me-2"></i>3 hrs</p>
-                <p class="fw-bold mb-0">$90</p>
+                <p class="fw-bold mb-0">github & scratch</p>
               </div>
             </div>
             <div class="d-flex align-items-center mb-4">
               <div class="flex-shrink-0">
-                <img src="..."
+                <img src="https://avatars.githubusercontent.com/u/140678641?v=4"
                   alt="Generic placeholder image" class="img-fluid rounded-circle border border-dark border-3"
                   style="width: 70px;">
               </div>
@@ -89,6 +89,75 @@
             <p class="my-4 pb-1">52 comments</p>
             <button type="button" class="btn btn-success btn-rounded btn-block btn-lg"><i
                 class="far fa-clock me-2"></i>contact</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    <section class="vh-100" style="background-color: #5f59f7;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card mb-5" style="border-radius: 15px;">
+          <div class="card-body p-4">
+            <h3 class="mb-3">Hotwheels diorama set</h3>
+            <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
+              <strong>Alkiva117</strong> on 17 september , 2023</p>
+            <hr class="my-4">
+            <div class="d-flex justify-content-start align-items-center">
+              <p class="mb-0 text-uppercase"><i class="fas fa-cog me-2"></i> <span
+                  class="text-muted small">settings</span></p>
+              <p class="mb-0 text-uppercase"><i class="fas fa-link ms-4 me-2"></i> <span
+                  class="text-muted small">-</span></p>
+              <p class="mb-0 text-uppercase"><i class="fas fa-ellipsis-h ms-4 me-2"></i> <span
+                  class="text-muted small">-</span>
+                <span class="ms-3 me-4">|</span></p>
+              <a href="#!">
+                <img src="https://avatars.githubusercontent.com/u/140678641?v=4" alt="avatar"
+                  class="img-fluid rounded-circle me-3" width="35">
+              </a>
+              <button type="button" class="btn btn-outline-dark btn-sm btn-floating">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body p-4">
+            <h3 class="mb-3">kelaskaryabersama</h3>
+            <p class="small mb-0"><i class="fas fa-star fa-lg text-warning"></i> <span class="mx-2">|</span>
+              Public <span class="mx-2">|</span> Updated by <strong>Alkiva117</strong> on 18 September , 2023
+            </p>
+            <hr class="my-4">
+            <div class="d-flex justify-content-start align-items-center">
+              <p class="mb-0 text-uppercase"><i class="fas fa-cog me-2"></i> <span
+                  class="text-muted small">settings</span></p>
+              <p class="mb-0 text-uppercase"><i class="fas fa-link ms-4 me-2"></i> <span
+                  class="text-muted small">https://kelaskaryabersama.netlify.app/</span></p>
+              <p class="mb-0 text-uppercase"><i class="fas fa-ellipsis-h ms-4 me-2"></i> <span
+                  class="text-muted small">https://github.com/alkiva117/kelaskaryabersama.com/</span>
+                <span class="ms-3 me-4">|</span></p>
+              <a href="#!">
+                <img src="https://mms.businesswire.com/media/20200311005462/en/779071/23/Scratch_Logo.jpg" alt="avatar"
+                  class="img-fluid rounded-circle me-1" width="35">
+              </a>
+              <a href="#">
+                <img src="https://avatars.githubusercontent.com/u/140678641?v=4" alt="avatar"
+                  class="img-fluid rounded-circle me-1" width="35">
+              </a>
+              <a href="#!">
+                <img src="https://teams.microsoft.com/api/mt/part/apac-02/beta/users/8:orgid:e7499033-f2c2-4191-9a4e-00400c1de981/profilepicturev2?displayname=Celestinus%20Milan%20Lizriadi%20(L)&size=HR64x64" alt="avatar"
+                  class="img-fluid rounded-circle me-1" width="35">
+              </a>
+              <a href="#!">
+                <img src="https://github.githubassets.com/images/modules/dashboard/universe23/logo.svg" alt="avatar"
+                  class="img-fluid rounded-circle me-3" width="35">
+              </a>
+              <button type="button" class="btn btn-outline-dark btn-sm btn-floating">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
