--- a/profile/index.html
+++ b/profile/index.html
@@ -35,67 +35,184 @@
     </div>
   </div>
 </nav>
-    <section class="vh-100" style="background-color: #eee;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-md-9 col-lg-7 col-xl-5">
-        <div class="card" style="border-radius: 15px; background-color: #93e2bb;">
-          <div class="card-body p-4 text-black">
-            <div>
-              <h6 class="mb-4">Alkiva rainza adiarsa</h6>
-              <div class="d-flex align-items-center justify-content-between mb-3">
-                <p class="small mb-0"><i class="far fa-clock me-2"></i>3 hrs</p>
-                <p class="fw-bold mb-0">github & scratch</p>
-              </div>
+<section style="background-color: #eee;">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col">
+        <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
+          <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">User</a></li>
+            <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card mb-4">
+          <div class="card-body text-center">
+            <img src="https://avatars.githubusercontent.com/u/140678641?v=4" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px;">
+            <h5 class="my-3">Alkiva</h5>
+            <p class="text-muted mb-1">programmer</p>
+            <p class="text-muted mb-4">Tanjungredeb, Berau, Kalimantan Timur, Indonesia</p>
+            <div class="d-flex justify-content-center mb-2">
+              <button type="button" class="btn btn-primary">Follow</button>
+              <button type="button" class="btn btn-outline-primary ms-1">Message</button>
             </div>
-            <div class="d-flex align-items-center mb-4">
-              <div class="flex-shrink-0">
-                <img src="https://avatars.githubusercontent.com/u/140678641?v=4"
-                  alt="Generic placeholder image" class="img-fluid rounded-circle border border-dark border-3"
-                  style="width: 70px;">
+          </div>
+        </div>
+        <div class="card mb-4 mb-lg-0">
+          <div class="card-body p-0">
+            <ul class="list-group list-group-flush rounded-3">
+              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <i class="fas fa-globe fa-lg text-warning"></i>
+                <p class="mb-0">https://kelaskaryabersama.netlify.app</p>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <i class="fab fa-github fa-lg" style="color: #333333;"></i>
+                <p class="mb-0">Alkiva117</p>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
+                <p class="mb-0">&lt;blank&gt;</p>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
+                <p class="mb-0">&lt;blank&gt;</p>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
+                <p class="mb-0">&lt;blank&gt;</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Full Name</p>
               </div>
-              <div class="flex-grow-1 ms-3">
-                <div class="d-flex flex-row align-items-center mb-2">
-                  <p class="mb-0 me-2">Alkiva117@github.com</p>
-                  <ul class="mb-0 list-unstyled d-flex flex-row" style="color: #1B7B2C;">
-                    <li>
-                      <i class="fas fa-star fa-xs"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star fa-xs"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star fa-xs"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star fa-xs"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star fa-xs"></i>
-                    </li>
-                  </ul>
-                </div>
-                <div>
-                  <button type="button" class="btn btn-outline-dark btn-rounded btn-sm"
-                    data-mdb-ripple-color="dark" href="https://scratch.mit.edu/users/kelaskaryabersama/">+ Follow</button>
-                  <button type="button" class="btn btn-outline-dark btn-rounded btn-sm"
-                    data-mdb-ripple-color="dark" href="https://github/alkiva117/">See profile</button>
-                  <button type="button" class="btn btn-outline-dark btn-floating btn-sm"
-                    data-mdb-ripple-color="dark"><i class="fas fa-comment" href="https://scratch.mit.edu/users/kelaskaryabersama/comments"></i></button>
-                </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">Alkiva rainza adiarsa</p>
               </div>
             </div>
             <hr>
-            <p class="my-4 pb-1">52 comments</p>
-            <button type="button" class="btn btn-success btn-rounded btn-block btn-lg"><i
-                class="far fa-clock me-2"></i>contact</button>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Email</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">alkiva.tegar@piwulangbecik.org</p>
+                <p class="text-muted mb-0">alkiva117@github.com</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Phone</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">(097)-</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Mobile</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">-</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Address</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">Tanjungredeb, Berau, Kalimantan Timur, Indonesia</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card mb-4 mb-md-0">
+              <div class="card-body">
+                <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
+                </p>
+                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
+                <div class="progress rounded mb-2" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card mb-4 mb-md-0">
+              <div class="card-body">
+                <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
+                </p>
+                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
+                <div class="progress rounded mb-2" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-    <section class="vh-100" style="background-color: #5f59f7;">
+</section>    <section class="vh-100" style="background-color: #5f59f7;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
