--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
                         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" aria-current="disabled" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle disabled" aria-current="disabled" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Colour modes
           </a>
           <ul class="dropdown-menu">
