--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     selector: 'div#search',
   });
 </script>
-  <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary style="background-color: #e3f2fd;">
+  <nav class="navbar sticky-top navbar-expand-lg style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Kelaskaryabersama.com</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
