--- a/learnpage/funtips-io/games/index.html
+++ b/learnpage/funtips-io/games/index.html
@@ -39,6 +39,7 @@
       <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Diep</a>
       <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Slither</a>
       <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Dashcraft</a>
+      <a class="list-group-item list-group-item-action active" id="list-pucks-list" data-bs-toggle="list" href="#list-pucks" role="tab" aria-controls="list-pucks">Pucks</a>
       <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Slingshot</a>
     </div>
   </div>
@@ -53,7 +54,8 @@
     <h4>slither.io <p><a href="https://slither.io">on slither.io</a></p></h4>
     <div class="ratio ratio-16x9">
   <iframe src="https://slither.io" title=".io game" allowfullscreen></iframe>
-</div></div>
+</div>
+      </div>
       <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
     <h4>dashcraft.io <p><a href="https://crazygames.com/games/dashcraft.io">on crazygame</a></p></h4>
 <div class="ratio ratio-16x9">
@@ -64,6 +66,12 @@
 <div class="ratio ratio-16x9">
   <iframe src="https://scratch.mit.edu/projects/873095813/" title="Scratch project" allowfullscreen></iframe>
 </div></div>
+            <div class="tab-pane fade" id="list-pucks" role="tabpanel" aria-labelledby="list-pucks-list">
+    <h4>pucks.io <p><a href="https://crazygames.com/games/pucks.io">on crazygame</a></p></h4>
+<div class="ratio ratio-16x9">
+  <iframe src="https://crazygames.com/games/pucks.io" title=".io game" allowfullscreen></iframe>
+</div></div>
+
     </div>
   </div>
 </div>
