--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Chat Box UI Design</title>
+    <title>Chat | kelaskaryabersama</title>
     <link rel="stylesheet" href="styles.css" />
 
     <!-- Import this CDN to use icons -->
@@ -34,12 +34,12 @@
 
               <div class="received-chats">
                 <div class="received-chats-img">
-                  <img src="user2.png" />
+                  <img src="http://118.98.228.52/media/Assets/foto/48b381d59_3008202316036.png" />
                 </div>
                 <div class="received-msg">
                   <div class="received-msg-inbox">
                     <p>
-                      Hi !! This is message from Riya . Lorem ipsum, dolor sit
+                      Hi !! This is message from github . Lorem ipsum, dolor sit
                       amet consectetur adipisicing elit. Non quas nemo eum,
                       earum sunt, nobis similique quisquam eveniet pariatur
                       commodi modi voluptatibus iusto omnis harum illum iste
@@ -71,12 +71,12 @@
               </div>
               <div class="received-chats">
                 <div class="received-chats-img">
-                  <img src="user2.png" />
+                  <img src="http://118.98.228.52/media/Assets/foto/48b381d59_3008202316036.png" />
                 </div>
                 <div class="received-msg">
                   <div class="received-msg-inbox">
                     <p class="single-msg">
-                      Hi !! This is message from John Lewis. Lorem ipsum, dolor
+                      Hi !! This is message from github. Lorem ipsum, dolor
                       sit amet consectetur adipisicing elit. iste distinctio
                       expedita illo!
                     </p>
