--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -100,7 +100,7 @@
     </div>
   </div>
 </div>
-    <a class="btn btn-primary" href="https://kelaskaryabersama.netlify.app/profile" role="button">chat</a>
+    <a class="btn btn-primary" href="chat" role="button">chat</a>
     <div class="p-3 mb-2 bg-info-subtle text-emphasis-info"></div>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
