--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -41,8 +41,8 @@
     wiih bagus banget chatnya! hehehe
   </div>
 </div>
-           <img src="https://teams.microsoft.com/api/mt/part/apac-02/beta/users/8:orgid:e7499033-f2c2-4191-9a4e-00400c1de981/profilepicturev2?displayname=Celestinus%20Milan%20Lizriadi%20(L)&size=HR96x96" class="rounded-circle float-start" style="width: 50px;"
-  alt="Avatar" />
+           <img src="profilepicturev2.jpg" class="rounded-circle float-start" style="width: 50px;"
+  alt="profilepicturev2" />
       <div class="card text-bg-success mb-3">
   <div class="card-body">
   bagus banget alkiva, aku aja gabisa bikin ☹️
