--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -44,7 +44,7 @@
 </div>
            <img src="profilepicturev2.jpg" class="rounded-circle float-start" style="width: 50px;"
   alt="profilepicturev2" />
-      <div class="card text-bg-success mb-3">
+      <div class="card text-bg-secondary mb-3">
   <div class="card-body">
   bagus banget alkiva, aku aja gabisa bikin ☹️
   </div>
