--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-md">
-    <p><a href="kelaskaryabersama.netlify.app/learnpage">&lt; Back</a></p>
+    <p><a href="https://kelaskaryabersama.netlify.app/learnpage">&lt; Back</a></p>
     <a class="navbar-brand" href="#">cloud chat</a>
   </div>
 </nav>
