--- a/learnpage/scratch/index.html
+++ b/learnpage/scratch/index.html
@@ -57,14 +57,24 @@
   <li class="nav-item">
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
-</ul>
-<scratchblocks>Scratch blocks for scratch 3.0:: #ff00ff cap</scratchblocks>
-<scratchblocks>lets learn!</scratchblocks>
-<scratchblocks>(1. motion)</scratchblocks>
-    <h6>here are some blocks from the motion folder:</h6>
-    <sb>move [10] steps</sb>
-    <sb>turn [15] degrees</sb>
-    <sb>change x by [10]</sb>
+    </ul>
+    <h1>Scratch blocks for scratch 3.0</h1>
+    <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Info</h5>
+    <p class="card-text">scratchblocks is not supported for this web. translate it using <a href="http://scratchblocks.github.io" class="btn btn-primary">scratchblocks.github.io</a></p>
+  </div>
+</div>
+    here are some scratchblocks:
+    <p>move [10] steps</p>
+    <p>turn [] degrees</p>
+    <p>go to [sprite1 v]</p>
+    <p>show</p>
+    <p>hide</p>
+    <p>change [color v] effect by[]</p>
+    <p>when I receive [start v]</p>
+    <p>broadcast [start v]</p>
+    <p>when [a v] is clicked</p>
     <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
