--- a/learnpage/maths/index.html
+++ b/learnpage/maths/index.html
@@ -28,10 +28,6 @@
     </div>
   </div>
 </nav>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Warning!</strong> this site is in construction.
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
     <h1 class="display-1">welcome to learn</h1>
     <h6>this is where you could learn coding with languages such as word blocks, <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>, and others.</h6>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -59,7 +55,7 @@
   </li>
 </ul>
     <img src="hammer-svg-repo.svg" class="rounded mx-auto d-block" alt="hammer-svg-repo">
-    <h1>this page is in construction</h1>
+    <h1>this tab is unavailable for a while</h1>
         <h1 class="display-1">News News!</h1>
     <div class="alert alert-success" role="alert">
       24 august 2023
