--- a/learnpage/chat/index.html
+++ b/learnpage/chat/index.html
@@ -93,7 +93,7 @@
    kalau kalian webnya gimana?
   </div>
 </div>
-    <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar sticky-bottom bg-body-tertiary" data-bs-theme="light">
   <div class="container-fluid">
     <form class="d-flex" role="search">
       <input class="form-control" type="text" placeholder="type message here..." aria-label="default input example">
